--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -2,3 +2,5 @@
   display: flex;
   flex-flow: column;
 }
+
+capacitor-google-map { display: inline-block; width: 100vw; height: 101vh; background: transparent; }
